--- a/goobi-viewer-core/WebContent/resources/css/less/viewer/views/search/searchTermList.less
+++ b/goobi-viewer-core/WebContent/resources/css/less/viewer/views/search/searchTermList.less
@@ -11,7 +11,9 @@
 			column-count: 3;
 			column-gap: 15px;	    	
 	    }
-	    li {}
+	    li {
+	    	break-inside: avoid;
+	    }
 	    a {
 	    	display: block;
 	    	padding: 5px 10px;
